--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,10 @@ layout: default
                 post-container">
 
 				{{ content }}
-
+                 <!-- {% if page.hdml_support %}
+                 <h1>HDML_SUPPORT</h1>
+                 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28977260&auto=1&height=66"></iframe>
+                 {% endif %} -->
                 <hr style="visibility: hidden;">
 
                 <ul class="pager">
